--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@ Theme Name: Telepathe
 Author: Juan Aguillón
 Version: 1.0
 Licence: GNU
-Description: Un exclenete tema de wordpress.
-Tags: Brillante, Una Columna, Responsive.
+Tags: Brillate, dos columnas, una columna, sidebar, responsive.
+Description: El mejor tema para wordpress.
 */
